InProgress #18388 - [Feature] Add  NutRequirementType in product specification

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_en.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_en.properties
@@ -381,6 +381,7 @@ bcpg_bcpgmodel.property.bcpg_nutListMaxi.title                            = Maxi
 bcpg_bcpgmodel.property.bcpg_nutListMeasurementPrecision.title            = Measurement precision
 bcpg_bcpgmodel.property.bcpg_nutListMethod.title                          = Method
 bcpg_bcpgmodel.property.bcpg_nutListMini.title                            = Mini
+bcpg_bcpgmodel.property.bcpg_nutListRequirementType.title                 = Target unit
 bcpg_bcpgmodel.property.bcpg_nutListRoundedValue.title                    = Labeled value
 bcpg_bcpgmodel.property.bcpg_nutListRoundedValuePrepared.title            = Prepared labeled value
 bcpg_bcpgmodel.property.bcpg_nutListUnit.title                            = Unit
