InProgress #18388 - [Feature] Add  NutRequirementType in product specification

--- a/becpg-integration-runner/src/test/resources/beCPG/translations/plm_en.properties
+++ b/becpg-integration-runner/src/test/resources/beCPG/translations/plm_en.properties
@@ -55,7 +55,7 @@ data.list.physicoChemList     = Physicochemical
 data.list.priceList           = Purchase price
 data.list.processList         = Process
 data.list.propertyVariantList = Property variant
-data.list.pubChannelList\      = Publication channels
+data.list.pubChannelList      = Publication channels
 data.list.reqCtrlList         = Requirements
 data.list.resourceParamList   = Resource parameters list
 data.list.scoreList           = Scores
@@ -153,6 +153,9 @@ message.formulate.notauhorized.ing                   = Ingredients are not autho
 message.formulate.nut.formulated                     = Formulation
 message.formulate.nut.maximalDailyValue              = The maximum daily value of nutrient {0} is exceeded
 message.formulate.nut.notInRangeValue                = The nutrient {0} (value: {1}) is not in specification range ({2}expected value{3})
+message.formulate.nut.notInRangeValue.AsPrepared     = The nutrient {0} (prepared value: {1}) is not in specification range ({2}expected value{3})
+message.formulate.nut.notInRangeValue.GdaPerc        = The nutrient {0} (% RI per portion value: {1}) is not in specification range ({2}expected value{3})
+message.formulate.nut.notInRangeValue.Serving        = The nutrient {0} (1 serving value: {1}) is not in specification range ({2}expected value{3})
 message.formulate.nut.wrongServingSize               = Wrong serving size {0} for {1}
 message.formulate.nutList.error                      = Error formulating nut ''{0}'': - {1}
 message.formulate.or                                 = or
