--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_en.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_en.properties
@@ -382,7 +382,7 @@ bcpg_bcpgmodel.property.bcpg_nutListMaxi.title                            = Maxi
 bcpg_bcpgmodel.property.bcpg_nutListMeasurementPrecision.title            = Measurement precision
 bcpg_bcpgmodel.property.bcpg_nutListMethod.title                          = Method
 bcpg_bcpgmodel.property.bcpg_nutListMini.title                            = Mini
-bcpg_bcpgmodel.property.bcpg_nutListRequirementType.title                 = Target unit
+bcpg_bcpgmodel.property.bcpg_nutListRequirementType.title                 = Target value
 bcpg_bcpgmodel.property.bcpg_nutListRoundedValue.title                    = Labeled value
 bcpg_bcpgmodel.property.bcpg_nutListRoundedValuePrepared.title            = Prepared labeled value
 bcpg_bcpgmodel.property.bcpg_nutListUnit.title                            = Unit
@@ -704,6 +704,9 @@ listconstraint.bcpg_meatTypes.Mammals                                 = Mammals
 listconstraint.bcpg_meatTypes.Porcines                                = Porcines
 listconstraint.bcpg_nutListMeasurementPrecisions.Approximatly         = Approximatly
 listconstraint.bcpg_nutListMeasurementPrecisions.LessThan             = Less Than
+listconstraint.bcpg_nutListRequirementType.AsPrepared                 = Prepared value
+listconstraint.bcpg_nutListRequirementType.GdaPerc                    = % RI per portion
+listconstraint.bcpg_nutListRequirementType.Serving                    = 1 serving
 listconstraint.bcpg_nutrientPreparationStates.Prepared                = Prepared
 listconstraint.bcpg_nutrientPreparationStates.Unprepared              = Unprepared
 listconstraint.bcpg_packagingLevel.Primary                            = Primary
