--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_fr.properties
@@ -382,7 +382,7 @@ bcpg_bcpgmodel.property.bcpg_nutListMaxi.title                            = Maxi
 bcpg_bcpgmodel.property.bcpg_nutListMeasurementPrecision.title            = Pr\u00E9cision de la mesure
 bcpg_bcpgmodel.property.bcpg_nutListMethod.title                          = M\u00E9thode
 bcpg_bcpgmodel.property.bcpg_nutListMini.title                            = Mini
-bcpg_bcpgmodel.property.bcpg_nutListRequirementType.title                 = Unit\u00E9 cible
+bcpg_bcpgmodel.property.bcpg_nutListRequirementType.title                 = Valeur cible
 bcpg_bcpgmodel.property.bcpg_nutListRoundedValue.title                    = Valeur \u00E9tiquet\u00E9e
 bcpg_bcpgmodel.property.bcpg_nutListRoundedValuePrepared.title            = Valeur \u00E9tiquet\u00E9e pr\u00E9par\u00E9e
 bcpg_bcpgmodel.property.bcpg_nutListUnit.title                            = Unit\u00E9
@@ -704,6 +704,9 @@ listconstraint.bcpg_meatTypes.Mammals                                 = Mammif\u
 listconstraint.bcpg_meatTypes.Porcines                                = Porcins
 listconstraint.bcpg_nutListMeasurementPrecisions.Approximatly         = Arrondi
 listconstraint.bcpg_nutListMeasurementPrecisions.LessThan             = Inf\u00E9rieur \u00E0
+listconstraint.bcpg_nutListRequirementType.AsPrepared                 = Valeur pr\u00E9par\u00E9
+listconstraint.bcpg_nutListRequirementType.GdaPerc                    = % AR par portion
+listconstraint.bcpg_nutListRequirementType.Serving                    = 1 portion
 listconstraint.bcpg_nutrientPreparationStates.Prepared                = Pr\u00E9par\u00E9
 listconstraint.bcpg_nutrientPreparationStates.Unprepared              = Non pr\u00E9par\u00E9
 listconstraint.bcpg_packagingLevel.Primary                            = Primaire
