Fix #18388 - [Feature] Add  NutRequirementType in product specification

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_en.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_en.properties
@@ -476,6 +476,8 @@ bcpg_bcpgmodel.property.bcpg_regulatoryModule.title                       = Regu
 bcpg_bcpgmodel.property.bcpg_regulatoryRecipeId.title                     = Regulatory recipe ID
 bcpg_bcpgmodel.property.bcpg_regulatoryResult.title                       = Regulatory result
 bcpg_bcpgmodel.property.bcpg_regulatoryState.title                        = Regulatory state
+bcpg_bcpgmodel.property.bcpg_regulatoryText.title                         = Message
+bcpg_bcpgmodel.property.bcpg_regulatoryType.title                         = Requirement level
 bcpg_bcpgmodel.property.bcpg_regulatoryUsages.title                       = Usages
 bcpg_bcpgmodel.property.bcpg_regulatoryValidationDate.title               = Regulatory validation date
 bcpg_bcpgmodel.property.bcpg_servingSize.title                            = Serving size
