--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_fr.properties
@@ -476,6 +476,8 @@ bcpg_bcpgmodel.property.bcpg_regulatoryModule.title                       = Modu
 bcpg_bcpgmodel.property.bcpg_regulatoryRecipeId.title                     = ID recette conformit\u00E9
 bcpg_bcpgmodel.property.bcpg_regulatoryResult.title                       = R\u00E9sultat conformit\u00E9
 bcpg_bcpgmodel.property.bcpg_regulatoryState.title                        = Etat conformit\u00E9
+bcpg_bcpgmodel.property.bcpg_regulatoryText.title                         = Message
+bcpg_bcpgmodel.property.bcpg_regulatoryType.title                         = Niveau d'exigence
 bcpg_bcpgmodel.property.bcpg_regulatoryUsages.title                       = Usages
 bcpg_bcpgmodel.property.bcpg_regulatoryValidationDate.title               = Date de validation r\u00E9glementaire
 bcpg_bcpgmodel.property.bcpg_servingSize.title                            = Taille d'une portion
