InProgress #23952 - [Feature] Add multi column in ingredient formulation

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_fr.properties
@@ -253,6 +253,8 @@ bcpg_bcpgmodel.property.bcpg_filIsGMO.title                               = OGM 
 bcpg_bcpgmodel.property.bcpg_filIsIonized.title                           = Ionisation interdit
 bcpg_bcpgmodel.property.bcpg_filQtyPercMaxi.title                         = Dosage maximal
 bcpg_bcpgmodel.property.bcpg_filQtyPercMaxiUnit.title                     = Unit\u00E9
+bcpg_bcpgmodel.property.bcpg_filQtyPercMini.title                         = Dosage minimal
+bcpg_bcpgmodel.property.bcpg_filQtyPercType.title                         = Valeur cible
 bcpg_bcpgmodel.property.bcpg_filRclDataType.title                         = Type d'exigence
 bcpg_bcpgmodel.property.bcpg_filReqMessage.title                          = Message
 bcpg_bcpgmodel.property.bcpg_filReqType.title                             = Niveau d'exigence
@@ -281,6 +283,10 @@ bcpg_bcpgmodel.property.bcpg_ingListIsSupport.title                       = Supp
 bcpg_bcpgmodel.property.bcpg_ingListQtyMaxi.title                         = Maxi
 bcpg_bcpgmodel.property.bcpg_ingListQtyMini.title                         = Mini
 bcpg_bcpgmodel.property.bcpg_ingListQtyPerc.title                         = Quantit\u00E9 (%)
+bcpg_bcpgmodel.property.bcpg_ingListQtyPerc1.title                        = Quantit\u00E9 1 (%)
+bcpg_bcpgmodel.property.bcpg_ingListQtyPerc2.title                        = Quantit\u00E9 2 (%)
+bcpg_bcpgmodel.property.bcpg_ingListQtyPerc3.title                        = Quantit\u00E9 3 (%)
+bcpg_bcpgmodel.property.bcpg_ingListQtyPerc4.title                        = Quantit\u00E9 4 (%)
 bcpg_bcpgmodel.property.bcpg_ingListQtyPercWithSecondaryYield.title       = Qt\u00E9 ap. REO (%)
 bcpg_bcpgmodel.property.bcpg_ingListQtyPercWithYield.title                = Qt\u00E9 ap. rdmt (%)
 bcpg_bcpgmodel.property.bcpg_ingListVolumeQtyPerc.description             = Pourcentage volumique
@@ -666,6 +672,14 @@ listconstraint.bcpg_dynamicCharactColumns.bcpg_dynamicCharactColumn8  = Colonne 
 listconstraint.bcpg_dynamicCharactColumns.bcpg_dynamicCharactColumn9  = Colonne 9
 listconstraint.bcpg_dynamicCharactExecOrders.Post                     = Fin
 listconstraint.bcpg_dynamicCharactExecOrders.Pre                      = D\u00E9but
+listconstraint.bcpg_filQtyPercTypes.Maxi                              = Maxi
+listconstraint.bcpg_filQtyPercTypes.Mini                              = Mini
+listconstraint.bcpg_filQtyPercTypes.QtyPerc1                          = Quantit\u00E9 1
+listconstraint.bcpg_filQtyPercTypes.QtyPerc2                          = Quantit\u00E9 2
+listconstraint.bcpg_filQtyPercTypes.QtyPerc3                          = Quantit\u00E9 3
+listconstraint.bcpg_filQtyPercTypes.QtyPerc4                          = Quantit\u00E9 4
+listconstraint.bcpg_filQtyPercTypes.QtyPercWithSecondaryYield         = Qt\u00E9 ap. REO
+listconstraint.bcpg_filQtyPercTypes.QtyPercWithYield                  = Qt\u00E9 ap. rdmt
 listconstraint.bcpg_labelClaimValues.certified                        = Certifi\u00E9
 listconstraint.bcpg_labelClaimValues.false                            = Non
 listconstraint.bcpg_labelClaimValues.na                               = Non applicable
@@ -706,9 +720,9 @@ listconstraint.bcpg_meatTypes.Mammals                                 = Mammif\u
 listconstraint.bcpg_meatTypes.Porcines                                = Porcins
 listconstraint.bcpg_nutListMeasurementPrecisions.Approximatly         = Arrondi
 listconstraint.bcpg_nutListMeasurementPrecisions.LessThan             = Inf\u00E9rieur \u00E0
-listconstraint.bcpg_nutListRequirementType.AsPrepared                 = Valeur pr\u00E9par\u00E9
-listconstraint.bcpg_nutListRequirementType.GdaPerc                    = % AR par portion
-listconstraint.bcpg_nutListRequirementType.Serving                    = 1 portion
+listconstraint.bcpg_nutListRequirementTypes.AsPrepared                = Valeur pr\u00E9par\u00E9
+listconstraint.bcpg_nutListRequirementTypes.GdaPerc                   = % AR par portion
+listconstraint.bcpg_nutListRequirementTypes.Serving                   = 1 portion
 listconstraint.bcpg_nutrientPreparationStates.Prepared                = Pr\u00E9par\u00E9
 listconstraint.bcpg_nutrientPreparationStates.Unprepared              = Non pr\u00E9par\u00E9
 listconstraint.bcpg_packagingLevel.Primary                            = Primaire
