--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_en.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_en.properties
@@ -253,6 +253,8 @@ bcpg_bcpgmodel.property.bcpg_filIsGMO.title                               = GMO
 bcpg_bcpgmodel.property.bcpg_filIsIonized.title                           = Ionization forbidden
 bcpg_bcpgmodel.property.bcpg_filQtyPercMaxi.title                         = Maximum dosage
 bcpg_bcpgmodel.property.bcpg_filQtyPercMaxiUnit.title                     = Unit
+bcpg_bcpgmodel.property.bcpg_filQtyPercMini.title                         = Minimum dosage
+bcpg_bcpgmodel.property.bcpg_filQtyPercType.title                         = Target value
 bcpg_bcpgmodel.property.bcpg_filRclDataType.title                         = Constraint type
 bcpg_bcpgmodel.property.bcpg_filReqMessage.title                          = Message
 bcpg_bcpgmodel.property.bcpg_filReqType.title                             = Requirement level
@@ -281,6 +283,10 @@ bcpg_bcpgmodel.property.bcpg_ingListIsSupport.title                       = Carr
 bcpg_bcpgmodel.property.bcpg_ingListQtyMaxi.title                         = Maxi
 bcpg_bcpgmodel.property.bcpg_ingListQtyMini.title                         = Mini
 bcpg_bcpgmodel.property.bcpg_ingListQtyPerc.title                         = Quantity (%)
+bcpg_bcpgmodel.property.bcpg_ingListQtyPerc1.title                        = Quantity 1 (%)
+bcpg_bcpgmodel.property.bcpg_ingListQtyPerc2.title                        = Quantity 2 (%)
+bcpg_bcpgmodel.property.bcpg_ingListQtyPerc3.title                        = Quantity 3 (%)
+bcpg_bcpgmodel.property.bcpg_ingListQtyPerc4.title                        = Quantity 4 (%)
 bcpg_bcpgmodel.property.bcpg_ingListQtyPercWithSecondaryYield.title       = Qty as prepared (%)
 bcpg_bcpgmodel.property.bcpg_ingListQtyPercWithYield.title                = Qty with yield (%)
 bcpg_bcpgmodel.property.bcpg_ingListVolumeQtyPerc.description             = Volume (%)
@@ -666,6 +672,14 @@ listconstraint.bcpg_dynamicCharactColumns.bcpg_dynamicCharactColumn8  = Column 8
 listconstraint.bcpg_dynamicCharactColumns.bcpg_dynamicCharactColumn9  = Column 9
 listconstraint.bcpg_dynamicCharactExecOrders.Post                     = Post
 listconstraint.bcpg_dynamicCharactExecOrders.Pre                      = Pre
+listconstraint.bcpg_filQtyPercTypes.Maxi                              = Maxi
+listconstraint.bcpg_filQtyPercTypes.Mini                              = Mini
+listconstraint.bcpg_filQtyPercTypes.QtyPerc1                          = Quantity 1
+listconstraint.bcpg_filQtyPercTypes.QtyPerc2                          = Quantity 2
+listconstraint.bcpg_filQtyPercTypes.QtyPerc3                          = Quantity 3
+listconstraint.bcpg_filQtyPercTypes.QtyPerc4                          = Quantity 4
+listconstraint.bcpg_filQtyPercTypes.QtyPercWithSecondaryYield         = Qty as prepared
+listconstraint.bcpg_filQtyPercTypes.QtyPercWithYield                  = Qty with yield 
 listconstraint.bcpg_labelClaimValues.certified                        = Certified
 listconstraint.bcpg_labelClaimValues.false                            = No
 listconstraint.bcpg_labelClaimValues.na                               = Not applicable
@@ -706,9 +720,9 @@ listconstraint.bcpg_meatTypes.Mammals                                 = Mammals
 listconstraint.bcpg_meatTypes.Porcines                                = Porcines
 listconstraint.bcpg_nutListMeasurementPrecisions.Approximatly         = Approximatly
 listconstraint.bcpg_nutListMeasurementPrecisions.LessThan             = Less Than
-listconstraint.bcpg_nutListRequirementType.AsPrepared                 = Prepared value
-listconstraint.bcpg_nutListRequirementType.GdaPerc                    = % RI per portion
-listconstraint.bcpg_nutListRequirementType.Serving                    = 1 serving
+listconstraint.bcpg_nutListRequirementTypes.AsPrepared                = Prepared value
+listconstraint.bcpg_nutListRequirementTypes.GdaPerc                   = % RI per portion
+listconstraint.bcpg_nutListRequirementTypes.Serving                   = 1 serving
 listconstraint.bcpg_nutrientPreparationStates.Prepared                = Prepared
 listconstraint.bcpg_nutrientPreparationStates.Unprepared              = Unprepared
 listconstraint.bcpg_packagingLevel.Primary                            = Primary
