Dev #21702 - [Feature] Survey auto-generation in several lists

--- a/becpg-project/becpg-project-core/src/main/resources/alfresco/module/becpg-project-core/model/surveyModel_fr.properties
+++ b/becpg-project/becpg-project-core/src/main/resources/alfresco/module/becpg-project-core/model/surveyModel_fr.properties
@@ -5,6 +5,7 @@ survey_surveymodel.association.survey_nextQuestion.title        = Question suiva
 survey_surveymodel.association.survey_slChoices.title           = Choix retenu
 survey_surveymodel.association.survey_slQuestion.title          = Question
 survey_surveymodel.property.survey_fsLinkedTypes.title          = Types d'entit\u00E9
+survey_surveymodel.property.survey_fsSurveyListName.title       = Liste de questionnaires
 survey_surveymodel.property.survey_questionCriterion.title      = Crit\u00E8re
 survey_surveymodel.property.survey_questionIsMandatory.title    = Obligatoire ?
 survey_surveymodel.property.survey_questionIsVisible.title      = Visible ?
