Fix #23647 - [Feature] Override messages at runtime for each entity type

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_en.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_en.properties
@@ -751,3 +751,16 @@ listconstraint.bcpg_variantColumns.bcpg_variantColumn2                = Variant 
 listconstraint.bcpg_variantColumns.bcpg_variantColumn3                = Variant 3
 listconstraint.bcpg_variantColumns.bcpg_variantColumn4                = Variant 4
 listconstraint.bcpg_variantColumns.bcpg_variantColumn5                = Variant 5
+
+model.override.bcpg_finishedProduct.cm_title.description     = Trade name
+model.override.bcpg_finishedProduct.cm_title.title           = Trade name
+model.override.bcpg_logisticUnit.cm_title.description        = Trade name
+model.override.bcpg_logisticUnit.cm_title.title              = Trade name
+model.override.bcpg_packagingKit.cm_title.description        = Trade name
+model.override.bcpg_packagingKit.cm_title.title              = Trade name
+model.override.bcpg_packagingMaterial.cm_title.description   = Trade name
+model.override.bcpg_packagingMaterial.cm_title.title         = Trade name
+model.override.bcpg_rawMaterial.cm_title.description         = Trade name
+model.override.bcpg_rawMaterial.cm_title.title               = Trade name
+model.override.bcpg_semiFinishedProduct.cm_title.description = Trade name
+model.override.bcpg_semiFinishedProduct.cm_title.title       = Trade name
