Fix #23952 - [Feature] Add multi column in ingredient formulation

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_en.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_en.properties
@@ -249,6 +249,7 @@ bcpg_bcpgmodel.property.bcpg_erpCode.title                                = ERP 
 bcpg_bcpgmodel.property.bcpg_evaporatedRate.title                         = Evaporation rate
 bcpg_bcpgmodel.property.bcpg_fdaNumber.title                              = FDA Cat.
 bcpg_bcpgmodel.property.bcpg_femaNumber.title                             = FEMA No.
+bcpg_bcpgmodel.property.bcpg_filIngLevel.title                            = Ingredient level
 bcpg_bcpgmodel.property.bcpg_filIsGMO.title                               = GMO
 bcpg_bcpgmodel.property.bcpg_filIsIonized.title                           = Ionization forbidden
 bcpg_bcpgmodel.property.bcpg_filQtyPercMaxi.title                         = Maximum dosage
@@ -285,8 +286,8 @@ bcpg_bcpgmodel.property.bcpg_ingListQtyMini.title                         = Mini
 bcpg_bcpgmodel.property.bcpg_ingListQtyPerc.title                         = Quantity (%)
 bcpg_bcpgmodel.property.bcpg_ingListQtyPerc1.title                        = Quantity 1 (%)
 bcpg_bcpgmodel.property.bcpg_ingListQtyPerc2.title                        = Quantity 2 (%)
-bcpg_bcpgmodel.property.bcpg_ingListQtyPerc3.title                        = Quantity 3 (%)
-bcpg_bcpgmodel.property.bcpg_ingListQtyPerc4.title                        = Quantity 4 (%)
+bcpg_bcpgmodel.property.bcpg_ingListQtyPerc3.title                        = Synthetic (%)
+bcpg_bcpgmodel.property.bcpg_ingListQtyPerc4.title                        = Natural (%)
 bcpg_bcpgmodel.property.bcpg_ingListQtyPercWithSecondaryYield.title       = Qty as prepared (%)
 bcpg_bcpgmodel.property.bcpg_ingListQtyPercWithYield.title                = Qty with yield (%)
 bcpg_bcpgmodel.property.bcpg_ingListVolumeQtyPerc.description             = Volume (%)
@@ -416,6 +417,9 @@ bcpg_bcpgmodel.property.bcpg_packagingListIsRecycle.title                 = Recy
 bcpg_bcpgmodel.property.bcpg_packagingListLossPerc.title                  = Loss %
 bcpg_bcpgmodel.property.bcpg_packagingListPkgLevel.title                  = Packaging level
 bcpg_bcpgmodel.property.bcpg_packagingListQty.title                       = Qty
+bcpg_bcpgmodel.property.bcpg_packagingListQtyForProduct.title             = Qty for product
+bcpg_bcpgmodel.property.bcpg_packagingListQtyPercForProduct.title         = Qty % for product
+bcpg_bcpgmodel.property.bcpg_packagingListQtyPercForSF.title              = Qty % for SF
 bcpg_bcpgmodel.property.bcpg_packagingListUnit.title                      = Unit
 bcpg_bcpgmodel.property.bcpg_pclMaxi.title                                = Maxi
 bcpg_bcpgmodel.property.bcpg_pclMini.title                                = Mini
