--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_fr.properties
@@ -249,6 +249,7 @@ bcpg_bcpgmodel.property.bcpg_erpCode.title                                = Code
 bcpg_bcpgmodel.property.bcpg_evaporatedRate.title                         = Taux d'\u00E9vaporation
 bcpg_bcpgmodel.property.bcpg_fdaNumber.title                              = FDA Cat.
 bcpg_bcpgmodel.property.bcpg_femaNumber.title                             = No. FEMA
+bcpg_bcpgmodel.property.bcpg_filIngLevel.title                            = Niveau de l'ingr\u00E9dient
 bcpg_bcpgmodel.property.bcpg_filIsGMO.title                               = OGM interdit
 bcpg_bcpgmodel.property.bcpg_filIsIonized.title                           = Ionisation interdit
 bcpg_bcpgmodel.property.bcpg_filQtyPercMaxi.title                         = Dosage maximal
@@ -285,8 +286,8 @@ bcpg_bcpgmodel.property.bcpg_ingListQtyMini.title                         = Mini
 bcpg_bcpgmodel.property.bcpg_ingListQtyPerc.title                         = Quantit\u00E9 (%)
 bcpg_bcpgmodel.property.bcpg_ingListQtyPerc1.title                        = Quantit\u00E9 1 (%)
 bcpg_bcpgmodel.property.bcpg_ingListQtyPerc2.title                        = Quantit\u00E9 2 (%)
-bcpg_bcpgmodel.property.bcpg_ingListQtyPerc3.title                        = Quantit\u00E9 3 (%)
-bcpg_bcpgmodel.property.bcpg_ingListQtyPerc4.title                        = Quantit\u00E9 4 (%)
+bcpg_bcpgmodel.property.bcpg_ingListQtyPerc3.title                        = Synth\u00E9tique 3 (%)
+bcpg_bcpgmodel.property.bcpg_ingListQtyPerc4.title                        = Naturelle (%)
 bcpg_bcpgmodel.property.bcpg_ingListQtyPercWithSecondaryYield.title       = Qt\u00E9 ap. REO (%)
 bcpg_bcpgmodel.property.bcpg_ingListQtyPercWithYield.title                = Qt\u00E9 ap. rdmt (%)
 bcpg_bcpgmodel.property.bcpg_ingListVolumeQtyPerc.description             = Pourcentage volumique
@@ -416,6 +417,9 @@ bcpg_bcpgmodel.property.bcpg_packagingListIsRecycle.title                 = Recy
 bcpg_bcpgmodel.property.bcpg_packagingListLossPerc.title                  = Freinte %
 bcpg_bcpgmodel.property.bcpg_packagingListPkgLevel.title                  = Niveau d'emballage
 bcpg_bcpgmodel.property.bcpg_packagingListQty.title                       = Qt\u00E9
+bcpg_bcpgmodel.property.bcpg_packagingListQtyForProduct.title             = Qt\u00E9 pour le produit
+bcpg_bcpgmodel.property.bcpg_packagingListQtyPercForProduct.title         = Qt\u00E9 % pour le produit
+bcpg_bcpgmodel.property.bcpg_packagingListQtyPercForSF.title              = % qt\u00E9. par SF
 bcpg_bcpgmodel.property.bcpg_packagingListUnit.title                      = Unit\u00E9
 bcpg_bcpgmodel.property.bcpg_pclMaxi.title                                = Maxi
 bcpg_bcpgmodel.property.bcpg_pclMini.title                                = Mini
